Co-authored-by: SommoRashed5 <rashedslayer5@users.noreply.github.com> Co-authored-by: bananaaaa4 <Typower550@users.noreply.github.com>

--- a/site/index.html
+++ b/site/index.html
@@ -1,1 +1,104 @@
+<!DOCTYPE html>
+<html lang="it">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
+
+</head>
+
+<body>
+    <div class="slideshow">
+        <div class="slide slide-1 active">
+            <div class="slide-content full">
+                <div class="text-content">
+                    <h1>Presentazione</h1>
+                
+                <div class="speaker">
+                    <img src="" alt="Speaker 1">
+                    <p><strong>Nome Cognome</strong></p>
+                </div>
+                <div class="speaker">
+                    <img src="" alt="Speaker 2">
+                    <p><strong>Nome Cognome</strong></p>
+                </div>
+                <div class="speaker">
+                    <img src="" alt="Speaker 3">
+                    <p><strong>Nome Cognome</strong></p>
+                </div>
+                <div class="speaker">
+                    <img src="" alt="Speaker 4">
+                    <p><strong>Nome Cognome</strong></p>
+                </div>
+                <div class="speaker">
+                    <img src="" alt="Speaker 5">
+                    <p><strong>Nome Cognome</strong></p>
+                </div>
+                <div class="speaker">
+                    <img src="" alt="Speaker 6">
+                    <p><strong>Nome Cognome</strong></p>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="slide slide-2">
+            <div class="slide-content full">
+                <div class="text-content">
+                    <h1>Progetti</h1>
+                    <p>Ho lavorato su diversi progetti, tra cui un'app di gestione delle attività, un sito di e-commerce
+                        e un blog personale. Amo affrontare nuove sfide e imparare nuove tecnologie.</p>
+                </div>
+            </div>
+        </div>
+        <div class="slide slide-3">
+            <div class="slide-content full">
+                <div class="text-content">
+                    <h1>Progetti</h1>
+                    <p>Ho lavorato su diversi progetti, tra cui un'app di gestione delle attività, un sito di e-commerce
+                        e un blog personale. Amo affrontare nuove sfide e imparare nuove tecnologie.</p>
+                </div>
+            </div>
+        </div>
+        <div class="slide slide-4">
+            <div class="slide-content full">
+                <div class="text-content">
+                    <h1>Progetti</h1>
+                    <p>Ho lavorato su diversi progetti, tra cui un'app di gestione delle attività, un sito di e-commerce
+                        e un blog personale. Amo affrontare nuove sfide e imparare nuove tecnologie.</p>
+                </div>
+            </div>
+        </div>
+        <div class="slide slide-5">
+            <div class="slide-content full">
+                <div class="text-content">
+                    <h1>Progetti</h1>
+                    <p>Ho lavorato su diversi progetti, tra cui un'app di gestione delle attività, un sito di e-commerce
+                        e un blog personale. Amo affrontare nuove sfide e imparare nuove tecnologie.</p>
+                </div>
+            </div>
+        </div>
+        <div class="slide slide-6">
+            <div class="slide-content full">
+                <div class="text-content">
+                    <h1>Progetti</h1>
+                    <p>Ho lavorato su diversi progetti, tra cui un'app di gestione delle attività, un sito di e-commerce
+                        e un blog personale. Amo affrontare nuove sfide e imparare nuove tecnologie.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="nav">
+        <button class="nav-btn" id="prev" onclick="prevSlide()">&lt;</button>
+        <button class="nav-btn" id="next" onclick="nextSlide()">&gt;</button>
+    </div>
+
+    <div class="dots" id="dots"></div>
+
+    <script src="script.js"></script>
+</body>
+
+</html>
