--- a/site/index.html
+++ b/site/index.html
@@ -57,12 +57,12 @@
                         <div class="speaker-inner">
                             <div class="speaker-front">
                                 <img src="foto/1.jpg" alt="Gabriele Ionadi">
-                                <h3>Gabriele Ionado</h3>
+                                <h3>Gabriele Ionadi</h3>
                                 <p>Iona</p>
                             </div>
                             <div class="speaker-back">
                                 <div class="speaker-info">
-                                    <h3>Gabriele Ionado</h3>
+                                    <h3>Gabriele Ionadi</h3>
                                     <p class="role">Lead Developer</p>
                                     <div class="speaker-stats">
                                         <div class="stat">
