--- a/site/index.html
+++ b/site/index.html
@@ -280,12 +280,16 @@
                                 <div class="photo-content">
                                     <div class="placeholder-image">👨‍👩‍👧‍👦</div>
                                     <p class="photo-caption">Marriage to William King, 1835</p>
+                                    <img src="foto/foto_cappe/williamking2.webp"/>
                                 </div>
                             </div>
                             <div class="photo">
                                 <div class="photo-content">
                                     <div class="placeholder-image">👶👶👶</div>
                                     <p class="photo-caption">Three children: Byron, Anne, Ralph</p>
+                                    <img src="foto/foto_cappe/byron king.jpg.jpeg">
+                                    <img src="foto/foto_cappe/anne king.jpg.jpeg">        
+                                    <img src="foto/foto_cappe/ralph king.jpg.jpeg">
                                 </div>
                             </div>
                             <div class="photo">
