--- a/site/index.html
+++ b/site/index.html
@@ -37,14 +37,10 @@
         </div>
         <div class="nav-item" data-slide="5">
             <span class="nav-number">06</span>
-            <span class="nav-label">Family</span>
+            <span class="nav-label">Projects</span>
         </div>
         <div class="nav-item" data-slide="6">
             <span class="nav-number">07</span>
-            <span class="nav-label">Projects</span>
-        </div>
-        <div class="nav-item" data-slide="7">
-            <span class="nav-number">08</span>
             <span class="nav-label">Legacy</span>
         </div>
     </nav>
@@ -431,41 +427,6 @@
             </div>
         </div>
 
-        <!-- SLIDE 5: Family con album fotografico interattivo -->
-        <div class="slide slide-5">
-            <div class="slide-content full">
-                <div class="text-content">
-                    <h1>Family and Life</h1>
-                    <div class="photo-gallery">
-                        <div class="photo-stack">
-                            <div class="photo">
-                                <div class="photo-content">
-                                    <div class="placeholder-image">👨‍👩‍👧‍👦</div>
-                                    <p class="photo-caption">Marriage to William King, 1835</p>
-                                    <img src="foto/foto_cappe/williamking2.webp" />
-                                </div>
-                            </div>
-                            <div class="photo">
-                                <div class="photo-content">
-                                    <div class="placeholder-image">👶👶👶</div>
-                                    <p class="photo-caption">Three children: Byron, Anne, Ralph</p>
-                                    <img src="foto/foto_cappe/byron king.jpg.jpeg">
-                                    <img src="foto/foto_cappe/anne king.jpg.jpeg">
-                                    <img src="foto/foto_cappe/ralph king.jpg.jpeg">
-                                </div>
-                            </div>
-                            <div class="photo">
-                                <div class="photo-content">
-                                    <div class="placeholder-image">👑</div>
-                                    <p class="photo-caption">Became Countess of Lovelace, 1838</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <!-- SLIDE 6: Projects con codice animato e tabs -->
         <div class="slide slide-6">
             <div class="slide-content full">
@@ -499,18 +460,76 @@
             <div class="slide-content full">
                 <div class="text-content">
                     <h1>Legacy</h1>
-                    <div class="impact-stats">
-                        <div class="impact-card">
-                            <div class="number-counter" data-target="1843">0</div>
-                            <p>First Computer Program</p>
+                    <div class="impact-stats" style="grid-template-columns: repeat(3, 1fr);">
+                        <div class="ada-lang-flip legacy-flip-1" style="height: 200px; position: relative;">
+                            <div class="ada-lang-inner"
+                                style="position: relative; width: 100%; height: 100%; transform-style: preserve-3d; transition: transform 0.7s ease;">
+                                <div class="ada-lang-front">
+                                    <div class="number-counter" data-target="1843">0</div>
+                                    <p>First Computer Program</p>
+                                </div>
+                                <div class="ada-lang-back">
+                                    <div class="ada-lang-back-icon">📜</div>
+                                    <div class="ada-lang-back-title">Note G</div>
+                                    <div class="ada-lang-back-year">Menabrea's Memoir · 1843</div>
+                                    <p class="ada-lang-back-desc">Ada translated Menabrea's memoir on Babbage's
+                                        Analytical Engine, adding notes three times longer than the original. Note G
+                                        contains the first algorithm ever written for a machine.</p>
+                                    <div class="ada-lang-tags">
+                                        <span>Bernoulli Numbers</span>
+                                        <span>Algoritmo</span>
+                                        <span>Babbage</span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="impact-card">
-                            <div class="number-counter" data-target="1980">0</div>
-                            <p>Ada Programming Language</p>
+                        <div class="ada-lang-flip" style="height: 200px; position: relative;">
+                            <div class="ada-lang-inner"
+                                style="position: relative; width: 100%; height: 100%; transform-style: preserve-3d; transition: transform 0.7s ease;">
+                                <div class="ada-lang-front">
+                                    <div class="number-counter" data-target="1980">0</div>
+                                    <p>Ada Programming Language</p>
+                                </div>
+                                <div class="ada-lang-back">
+                                    <div class="ada-lang-back-icon">💻</div>
+                                    <div class="ada-lang-back-title">Ada Language</div>
+                                    <div class="ada-lang-back-year">MIL-STD-1815 · 1983</div>
+                                    <p class="ada-lang-back-desc">Developed by the U.S. Department of Defense and
+                                        designed by Jean Ichbiah. Used in aviation, military systems, and space
+                                        missions.</p>
+                                    <div class="ada-lang-tags">
+                                        <span>Safety-critical</span>
+                                        <span>Real-time</span>
+                                        <span>Strongly typed</span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="impact-card">
-                            <div class="number-counter" data-target="100">0</div>
-                            <p>Years Ahead of Her Time</p>
+                        <div class="ada-lang-flip legacy-flip-3" style="height: 200px; position: relative;">
+                            <div class="ada-lang-inner"
+                                style="position: relative; width: 100%; height: 100%; transform-style: preserve-3d; transition: transform 0.7s ease;">
+                                <div class="ada-lang-front"
+                                    style="border-color: rgba(180,120,255,0.4); background: rgba(180,120,255,0.05);">
+                                    <div style="font-size: 2.2rem; margin-bottom: 8px;">♾️</div>
+                                    <div
+                                        style="font-size: 1.2rem; font-weight: 700; color: #c890ff; margin-bottom: 4px;">
+                                        Ada Lovelace Day</div>
+                                    <div style="font-size: 0.85rem; color: #b07de0;">2nd Tuesday of October</div>
+                                </div>
+                                <div class="ada-lang-back" style="border-color: rgba(180,120,255,0.4);">
+                                    <div class="ada-lang-back-icon">🌍</div>
+                                    <div class="ada-lang-back-title" style="color: #c890ff;">Dal 2009</div>
+                                    <div class="ada-lang-back-year">Founded by Suw Charman-Anderson</div>
+                                    <p class="ada-lang-back-desc">A global celebration of women in STEM: scientists,
+                                        engineers, mathematicians and technologists worldwide share stories of women who
+                                        inspire them.</p>
+                                    <div class="ada-lang-tags">
+                                        <span>STEM</span>
+                                        <span>Women in Tech</span>
+                                        <span>Globale</span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <blockquote class="quote">
@@ -541,6 +560,20 @@
     <div class="progress" id="progress"></div>
 
     <script src="script.js"></script>
+
+    <script>
+        // Legacy Flip Cards
+        document.querySelectorAll('.ada-lang-flip').forEach(card => {
+            const inner = card.querySelector('.ada-lang-inner');
+            if (!inner) return;
+            card.addEventListener('mouseenter', () => {
+                inner.style.transform = 'rotateY(180deg)';
+            });
+            card.addEventListener('mouseleave', () => {
+                inner.style.transform = 'rotateY(0deg)';
+            });
+        });
+    </script>
 </body>
 
 </html>
