--- a/site/home.html
+++ b/site/home.html
@@ -146,7 +146,7 @@
                         <div class="speaker-inner">
                             <div class="speaker-front">
                                 <img src="foto/5.webp" alt="Samuel Di Lauro">
-                                <h3>Sg-SamuelGame25</h3>
+                                <h3>Samuel Di Lauro</h3>
                                 <p>Samu</p>
                             </div>
                             <div class="speaker-back">
